<resources>
    <string name="app_name">СТРОЙМАТ</string>
    <string name="title_calculators">Калькуляторы</string>
    <string name="title_gallery">Галерея</string>
    <string name="title_pricelist">Прайслист</string>
    <string name="search_hint">Поиск товаров</string>
    <string name="nav_header_title">Категории</string>
    <string name="all">Все</string>
    <string name="profnastil">Профнастил</string>
    <string name="siding">Сайдинг</string>
    <string name="other">Другое</string>
    <string name="width_and_meter">Ширина, м</string>
    <string name="length_and_meter">Длина, м</string>
    <string name="height_and_meter">Высота, м</string>
    <string name="price_per_meter">Цена, руб/шт</string>
    <string name="price_per_meter2">Цена, руб/м2</string>
    <string name="currency_slash">руб/</string>
    <string name="currency">руб</string>
    <string name="null_price" translatable="false">0.00</string>
    <string name="null_square" translatable="false">0.00</string>
    <string name="null_quantity" translatable="false">0</string>
    <string name="square_units">м"\u00b2"</string>
    <string name="quantity_units_default">шт</string>
    <string name="result_subtitle">Итого</string>
    <string name="price">Цена</string>
    <string name="square">Площадь</string>
    <string name="reserve">Запас</string>
    <string name="trotuar">Тротуар</string>
    <string name="bordury_vodostoky">Бордюры, водостоки</string>
    <string name="item_name">Наименование</string>
    <string name="article">Артикул</string>
    <string name="about_app_dev_mail" translatable="false">alektas@inbox.ru</string>
    <string name="about_app_developer">\u00A9 2019 Тотилас А.А.</string>
    <string name="about_shop_descr">
        Магазин строительных и отделочных материалов \u00ABСТРОЙМАТ\u00BB
        имеет широкий ассортимент товаров на складе и под заказ.
        \n
        \n✔ Выезд замерщика БЕСПЛАТНО
        \n✔ Товар В НАЛИЧИИ на складе
        \n✔ Все образцы представлены в магазине
        \n✔ Доставка заказных позиций в течении недели
        \n✔ Рассрочка без банка и кредит на выгодных условиях
        \n✔ При комплексной покупке строительных материалов вы получите дополнительные скидки
        \n
        \nРежим работы:
        \nПН-ПТ:  9 — 18
        \nСБ:  9 — 16
        \nВС:  9 — 12</string>
    <string name="about_app_icons_by">Иконки:</string>
    <string name="about_app_google_material" translatable="false">Google Material</string>
    <string name="about_app_license">(лицензия)</string>
    <string name="apache_license_link" translatable="false">https://www.apache.org/licenses/LICENSE-2.0.html</string>
    <string name="google_material_link" translatable="false">https://material.io/tools/icons/</string>
    <string name="about_app_version">Версия: %s</string>
    <string name="about_shop_title">О магазине</string>
    <string name="about_app_developer_text">Разработчик:</string>
    <string name="about_app_license_link" translatable="false">https://drive.google.com/open?id=16AqzRmjffnTd2uTeKOGGI5Tm6KIX145e</string>
    <string name="about_shop_address_link" translatable="false">https://yandex.ru/maps/-/CCs~F67~</string>
    <string name="about_shop_address_label">Адрес:</string>
    <string name="about_shop_phone">+7(912)867–01–01</string>
    <string name="about_shop_mail">stroymat18@mail.ru</string>
    <string name="about_shop_address_name">с. Усть-Кулом, ул.Мостовая 1</string>
    <string name="stove">Печь</string>
    <string name="bricks">Кирпичи</string>
    <string name="width">Ширина</string>
    <string name="profnastil_quantity">Листов профнастила</string>
    <string name="percent">%</string>
    <string name="overlap">Нахлест (кол-во волн)</string>
    <string name="length">Длина</string>
    <string name="length_units">м</string>
    <string name="roof_piece">Скат крыши</string>
    <string name="default_notification_channel_id">DEFAULT_NOTIFICATIONS_CHANNEL</string>
    <string name="PREFS_NAME">app_preferences</string>
    <string name="PRICELIST_VERSION_KEY">PRICELIST_VERSION_KEY</string>
    <string name="CATEGORIES_VERSION_KEY">CATEGORIES_VERSION_KEY</string>
    <string name="category">Категория</string>
    <string name="article_empty">0000000</string>
    <string name="update_gallery">Обновить</string>
    <string name="no_internet">Нет подключения к Интернету</string>
    <string name="no_items">Товары не найдены</string>
    <string name="about_app_descr">Приложение предназначено для ознакомления со списком товаров
        магазина \u00ABСТРОЙМАТ\u00BB, приблизительного расчета необходимых материалов
        и просмотра реальных объектов, использующих товары магазина</string>
    <string name="license_label">Лицензионное соглашение и политика конфиденциальности</string>
    <string name="about_app_title">О приложении</string>
    <string name="add_to_cart">В корзину</string>
    <string name="quantity">Количество</string>
    <string name="unit">Единица</string>
    <string name="title_cart">Корзина</string>
    <string name="order">Заказать</string>
    <string name="result_with_star">Итого*</string>
    <string name="order_price_ps">* Цены приблизительные. Для уточнения обращайтесь в отделение магазина</string>
    <string name="login_surname">Фамилия</string>
    <string name="login_phone">Номер телефона</string>
    <string name="login_save">Сохранить</string>
    <string name="login_intro">Для осуществления заказов необходимо ввести фамилию, имя и номер телефона.\nВсе поля обязательны</string>
    <string name="name">Имя</string>
    <string name="PREFS_LOGIN_KEY">LOGIN_PREFS</string>
    <string name="LOGIN_SURNAME_KEY">LOGIN_SURNAME_KEY</string>
    <string name="LOGIN_NAME_KEY">LOGIN_NAME_KEY</string>
    <string name="LOGIN_PHONE_KEY">LOGIN_PHONE_KEY</string>
    <string name="menu_login">Зарегистрироваться</string>
    <string name="menu_logout">Очистить данные</string>
    <string name="order_sucess">Заказ успешно оформлен</string>
    <string name="clear_cart_question">Очистить корзину?</string>
    <string name="GALLERY_VERSION_KEY">GALLERY_VERSION_KEY</string>
    <string name="GALLERY_ENABLE_KEY">GALLERY_ENABLE_KEY</string>
    <string name="title_server">Сервер</string>
    <string name="reset_pricelist">Удалить прайслист</string>
    <string name="upload_pricelist">Загрузить прайслист</string>
    <string name="reset_categories">Удалить категории</string>
    <string name="upload_categories">Загрузить категории</string>

</resources>
