<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:id="@+id/about_app_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/about_app_descr" />

        <TextView
            android:id="@+id/developer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_below="@id/about_app_description"
            style="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/about_app_developer_text" />

        <TextView
            android:id="@+id/developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/developer_text"
            style="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/about_app_developer" />

        <TextView
            android:id="@+id/dev_mail_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/developer"
            style="@style/TextAppearance.AppCompat.Medium"
            android:autoLink="email"
            android:text="@string/about_app_dev_mail" />

        <TextView
            android:id="@+id/icons_designers_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_below="@id/dev_mail_link"
            style="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/about_app_icons_by" />

        <TextView
            android:id="@+id/google_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_below="@id/icons_designers_text"
            style="@style/TextAppearance.AppCompat.Medium"
            android:clickable="true"
            android:onClick="onLinkClick"
            android:text="@string/about_app_google_material"
            android:focusable="true" />

        <TextView
            android:id="@+id/apache_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/google_link"
            android:layout_alignBaseline="@id/google_link"
            style="@style/TextAppearance.AppCompat.Medium"
            android:clickable="true"
            android:onClick="onLinkClick"
            android:text="@string/about_app_license"
            android:focusable="true" />

        <TextView
            android:id="@+id/license_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_below="@id/google_link"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onLinkClick"
            style="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/license_label" />

        <TextView
            android:id="@+id/version_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:layout_marginTop="16dp"
            android:layout_below="@id/license_link"
            android:layout_alignParentEnd="true"
            style="@style/TextAppearance.AppCompat.Small" />

    </RelativeLayout>
</ScrollView>