<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="alektas.stroymat.ui.cart.CartFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@id/order_price_label"
        android:scrollbars="vertical"
        tools:listitem="@layout/item_cart"/>

    <TextView
        android:id="@+id/order_price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="@dimen/margin_horiz_basic"
        android:layout_alignParentStart="true"
        android:layout_above="@id/order_price_postscriptum"
        android:layout_toStartOf="@id/order_price"
        style="@style/Text.Cart.Title"
        android:text="@string/result_with_star"/>

    <TextView
        android:id="@+id/order_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_item_text"
        android:layout_marginEnd="@dimen/margin_horiz_between_text"
        android:layout_alignBaseline="@id/order_price_label"
        android:layout_toStartOf="@id/order_price_currency"
        style="@style/Text.Cart.Title"
        android:text="@string/null_price"/>

    <TextView
        android:id="@+id/order_price_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_horiz_basic"
        android:layout_alignBaseline="@id/order_price_label"
        android:layout_alignParentEnd="true"
        android:text="@string/currency"
        style="@style/Text.Cart.Title" />

    <TextView
        android:id="@+id/order_price_postscriptum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horiz_basic"
        android:layout_marginEnd="@dimen/margin_horiz_basic"
        android:layout_alignParentStart="true"
        android:layout_above="@id/cart_order_btn"
        style="@style/Text.Cart.Tiny"
        android:text="@string/order_price_ps"/>
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/cart_order_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/margin_top_basic"
        android:layout_marginBottom="@dimen/margin_top_basic"
        android:layout_marginStart="@dimen/margin_horiz_basic"
        android:layout_marginEnd="@dimen/margin_horiz_basic"
        android:text="@string/order"/>

</RelativeLayout>
