<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardPreventCornerOverlap="true"
    app:cardCornerRadius="@dimen/corners_pricelist_item"
    android:layout_marginStart="@dimen/margin_horiz_small"
    android:layout_marginEnd="@dimen/margin_horiz_small"
    android:layout_marginTop="@dimen/margin_top_basic">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:paddingStart="@dimen/margin_activity_horizontal"
        android:paddingEnd="@dimen/margin_activity_horizontal">

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_item_text"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/item_del_btn"
            style="@style/Text.Pricelist.Name"
            android:maxLines="3"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/item_price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_item_text"
            android:layout_marginBottom="@dimen/margin_top_basic"
            android:layout_alignParentStart="true"
            android:layout_below="@id/item_quantity_label"
            android:layout_toStartOf="@id/item_price"
            style="@style/Text.Cart.Subtitle"
            android:text="@string/price"/>

        <TextView
            android:id="@+id/item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_item_text"
            android:layout_marginEnd="@dimen/margin_horiz_between_text"
            android:layout_toStartOf="@id/item_del_btn"
            android:layout_alignBaseline="@id/item_price_label"
            style="@style/Text.Cart.Subtitle"
            android:text="@string/null_price"/>

        <TextView
            android:id="@+id/item_price_currency"
            style="@style/Text.Cart.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/item_del_btn"
            android:layout_alignBaseline="@id/item_price_label"
            android:text="@string/currency" />

        <TextView
            android:id="@+id/item_quantity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_alignParentStart="true"
            android:layout_below="@id/item_name"
            android:layout_toStartOf="@id/item_quantity"
            style="@style/Text.Cart.Subtitle"
            android:text="@string/quantity"/>

        <TextView
            android:id="@+id/item_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_item_text"
            android:layout_marginEnd="@dimen/margin_horiz_between_text"
            android:layout_toStartOf="@id/item_del_btn"
            android:layout_alignBaseline="@id/item_quantity_label"
            style="@style/Text.Cart.Subtitle"
            android:text="@string/null_quantity"/>

        <TextView
            android:id="@+id/item_quantity_units"
            style="@style/Text.Cart.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/item_del_btn"
            android:layout_alignBaseline="@id/item_quantity_label"
            android:text="@string/quantity_units_default" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/item_quantity_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_price_label"
            android:layout_marginTop="@dimen/margin_top_item_text"
            android:layout_marginBottom="@dimen/margin_top_basic"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/item_quantity_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:hint="@string/quantity" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/item_del_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:tint="@android:color/white"
            app:srcCompat="@drawable/ic_close_black_24dp"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
