<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/margin_horiz_basic"
    android:paddingEnd="@dimen/margin_horiz_basic"
    tools:context=".ui.MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_calc_profnastil"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:onClick="onCalcBtnClick"
        android:text="@string/profnastil"
        app:layout_constraintBottom_toTopOf="@+id/btn_calc_siding"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_calc_siding"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:onClick="onCalcBtnClick"
        android:text="@string/siding"
        app:layout_constraintBottom_toTopOf="@+id/btn_calc_trotuar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_calc_profnastil"
        app:layout_constraintVertical_bias="0.3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_calc_trotuar"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:onClick="onCalcBtnClick"
        android:text="@string/trotuar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_calc_siding"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>